Coredns container delete version issue fixed.

--- a/deployment/sandbox-v2/roles/coredns/tasks/main.yml
+++ b/deployment/sandbox-v2/roles/coredns/tasks/main.yml
@@ -31,11 +31,10 @@
     dest: '{{coredns.path}}'
 
 - name: Delete running container
-  docker_container:
-    name: '{{coredns.name}}'
-    state: absent
+  shell: 'docker rm -f {{coredns.name}}'
   become: yes
-
+  ignore_errors: yes
+     
 - name: Start docker container
   shell: 'docker run -d --name {{coredns.name}} --restart=always --volume={{coredns.path}}:/root/ -p 53:53/udp {{coredns.image}} -conf /root/Corefile'
   become: yes
