[MOSIP-10486] updated iam_auth_adapter_url

--- a/deployment/sandbox-v2/group_vars/all.yml
+++ b/deployment/sandbox-v2/group_vars/all.yml
@@ -321,4 +321,4 @@ coredns:
   db: '{{tmp_dir}}/dns/sandbox_dns.db'
   image: coredns/coredns
 
-iam_adapter_url: http://15.207.222.178/artifactory/libs-snapshot-local/io/mosip/kernel/kernel-auth-adapter/1.2.0-SNAPSHOT/kernel-auth-adapter-1.2.0-20200918.164425-65.jar
+iam_adapter_url: http://artifactory-service/artifactory/libs-snapshot-local/io/mosip/kernel/kernel-auth-adapter/1.2.0/kernel-auth-adapter-1.2.0-20200918.164425-65.jar
