[MOSIP-10389] adding the biosdk service

--- a/deployment/sandbox-v2/versions.yml
+++ b/deployment/sandbox-v2/versions.yml
@@ -166,3 +166,7 @@ versions:
     artifactory:
       service:
         'artifactory-service': 'mosipdev/artifactory-server:1.1.2'
+
+    mockbiosdk:
+      service:
+        'mock-biosdk-service': 'ankitvaishnav/sdk-services:latest'
