Sandbox url passed as environment variable in dmz regproc

--- a/deployment/sandbox-v2/helm/charts/dmzregproc/templates/camel-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/dmzregproc/templates/camel-dep.yaml
@@ -41,6 +41,8 @@ spec:
           value: dmz
         - name: is_glowroot_env
           value: {{ .Values.isGlowroot }}
+        - name: mosipbox_public_url
+          value: {{ .Values.sitePublicUrl }}
         ports:
         - name: eventbus-port
           containerPort: {{ .Values.services.camel.ports.eventbusPort }}
