--- a/deployment/sandbox-v2/playbooks/ida.yml
+++ b/deployment/sandbox-v2/playbooks/ida.yml
@@ -29,5 +29,5 @@
   tasks:
     - name: Upload ida cred service certificate to keymanager
       shell:
-        cmd: './ida_zk.py'
+        cmd: './ida_zk.py --server {{site.sandbox_internal_url}} --disable_ssl_verify'
         chdir: '{{install_root}}/utils/onboard/ida_zk'
