--- a/deployment/sandbox-v2/reset.yml
+++ b/deployment/sandbox-v2/reset.yml
@@ -13,3 +13,4 @@
 - {import_playbook: playbooks/reset/reset-monitoring.yml}
 - {import_playbook: playbooks/reset/reset-repos.yml}
 - {import_playbook: playbooks/reset/reset-docker-registry.yml}
+- {import_playbook: playbooks/reset/reset-dockers.yml}
