--- a/deployment/sandbox-v2/helm/charts/ida/templates/internal-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/ida/templates/internal-dep.yaml
@@ -45,6 +45,8 @@ spec:
           value: {{ .Values.services.internal.hsmUrl }} 
         - name: zip_file_path
           value: {{ .Values.services.internal.hsmClientZipPath }}
+        - name: mosip_biosdk_service
+          value: {{ .Values.biosdkServiceUrl }} 
         ports:
         - containerPort: {{ .Values.services.internal.containerPort }}
 
