--- a/deployment/sandbox-v2/versions.yml
+++ b/deployment/sandbox-v2/versions.yml
@@ -43,7 +43,7 @@ versions:
     registration_client:
       downloader:
         'reg-client-downloader': 'mosipdev/registration-client:1.1.3'
-      version: 1.1.3-rc2
+      version: 1.1.3
     regproc:
       camel:
         'regproc-camel-stage': 'mosipdev/registration-processor-common-camel-bridge:1.1.3'
