--- a/deployment/sandbox-v2/roles/coredns/tasks/main.yml
+++ b/deployment/sandbox-v2/roles/coredns/tasks/main.yml
@@ -13,6 +13,11 @@
     path: '{{coredns.db}}'
     state: touch
 
+- name: Create empty ingress dns db file
+  file: 
+    path: '{{coredns.ingress_db}}'
+    state: touch
+
 - name: Populate dns db file
   lineinfile:
     path: '{{coredns.db}}'
@@ -25,10 +30,15 @@
   with_inventory_hostnames:
     - all
 
+- name: Populate alias dns db file
+  lineinfile:
+    path: '{{coredns.ingress_db}}'
+    line:  '{{site.ingress_tld}}.    IN  SOA dns.{{site.ingress_tld}}. admin.{{site.ingress_tld}}. 2015082541 7200 3600 315360000 3600'
+
 - name: Populate aliases dns db file
   lineinfile:
-    path: '{{coredns.db}}'
-    line: '{{item.value.alias}}.   IN   CNAME {{ item.value.node.split(".")[0:-1] | join("") }}' # Remove the TLD suffix
+    path: '{{coredns.ingress_db}}'
+    line: '{{item.value.alias}}.   IN   A {{ item.value.node }}' # Remove the TLD suffix
   loop: "{{lookup('dict', coredns.aliases)}}"
 
 - name: Copy Corefile
