--- a/deployment/sandbox-v2/site.yml
+++ b/deployment/sandbox-v2/site.yml
@@ -22,10 +22,9 @@
 - import_playbook: playbooks/mzclamav.yml  # Each zone has it's own clamav
 - import_playbook: playbooks/dmzclamav.yml
 - import_playbook: playbooks/activemq.yml
-- import_playbook: playbooks/mock-biosdk.yml
+#- import_playbook: playbooks/mock-biosdk.yml    #TODO
 - import_playbook: playbooks/minio.yml
 - import_playbook: playbooks/artifactory.yml
-- import_playbook: playbooks/mock-biosdk.yml
 # MOSIP modules
 - import_playbook: playbooks/config-server.yml    
 - import_playbook: playbooks/kernel.yml
