--- a/deployment/sandbox-v2/roles/k8scluster/dashboard/tasks/main.yml
+++ b/deployment/sandbox-v2/roles/k8scluster/dashboard/tasks/main.yml
@@ -1,28 +1,46 @@
 # Kubernetes dashboard tasks
 
-- name: Create dashboard yml from template 
+- name: Create dashboard yml from template
   template:
     src:  dashboard.yml.j2
     dest: '{{tmp_dir}}/{{cluster_name}}_dashboard.yml'
 
 - name: 'Create {{cluster_name}} dashboard'
   command: 'kubectl --kubeconfig={{kube_config}} apply -f {{tmp_dir}}/{{cluster_name}}_dashboard.yml'
-  register: create_result
-  until: create_result.rc == 0
+  register: create_result_admin
+  until: create_result_admin.rc == 0
   retries: 5
   delay: 2
   ignore_errors: true
 
-- name:  Get dashboard token  
-  shell: '{{install_root}}/utils/get_dashboard_token.py {{kube_config}}' 
-  register: token
+- name: Create view-only dashboard
+  command: 'kubectl --kubeconfig={{kube_config}} apply -f {{install_root}}/roles/k8scluster/dashboard/templates/view-dashboard.yaml'
+  register: create_result_view
+  until: create_result_view.rc == 0
+  retries: 5
+  delay: 2
+  ignore_errors: true
+
+- name:  Get dashboard token
+  shell: '{{install_root}}/utils/get_dashboard_token.py {{kube_config}} admin-user {{install_root}}/utils/mz_dashboard_admin.token' 
+  register: token_admin
+
+- name:  Get dashboard token
+  shell: '{{install_root}}/utils/get_dashboard_token.py {{kube_config}} view-user {{install_root}}/utils/mz_dashboard_view.token'
+  register: token_view
 
 - debug:
-    msg: '{{token.stdout}}'
+    msg: '{{token_admin.stdout}}'
 
-- name: 'Copy the token to {{dashboard_conf.token_file}}' 
+- debug:
+    msg: '{{token_view.stdout}}'
+
+- name: 'Copy the token to {{dashboard_conf.token_file}}'
   copy:
-    content: "{{token.stdout}}\n"
+    content: "{{token_admin.stdout}}\n"
     dest: '{{dashboard_conf.token_file}}'
 
-
+- name: 'Copy the token to {{dashboard_conf.token_file}}'
+  copy:
+    content: "{{token_view.stdout}}\n"
+    dest: '{{dashboard_conf.token_file}}'
