--- a/deployment/sandbox-v2/roles/github/tasks/main.yml
+++ b/deployment/sandbox-v2/roles/github/tasks/main.yml
@@ -5,25 +5,14 @@
 #     version: branch or tag to checkout
 #     githubuser
 #     githubpassword
-#     
 
-- name: 'Create foler {{repo_dest}} if does not exist'
-  file:
-    path: '{{repo_dest}}'
-    state: directory
+- name: git checkout 
+  expect: 
+    command: 'git clone -b {{version}} -q {{repo_path}} {{repo_dest}}'
+    responses:
+      Username: '{{githubuser}}'
+      Password: '{{githubpassword}}'
+  register: return_val
+  failed_when: "'already exists and is not an empty directory' not in return_val.stdout"
+  no_log: false
 
-- debug:
-    msg: 'Cloning {{repo_path}} into {{repo_dest}}'
-
-- set_fact:
-    repo_path: '{{repo_path.split("://")[0]}}://{{ githubuser | urlencode }}:{{ githubpassword | urlencode }}@{{repo_path.split("://")[1]}}' 
-  when: config_repo.private == true 
-
-- git:
-    repo: '{{repo_path}}'
-    dest: '{{repo_dest}}'
-    update: no 
-    version: '{{config_repo.version}}'
-    force: no
-  no_log: true
--
