--- a/deployment/sandbox-v2/roles/github/tasks/main.yml
+++ b/deployment/sandbox-v2/roles/github/tasks/main.yml
@@ -12,7 +12,6 @@
     responses:
       Username: '{{githubuser}}'
       Password: '{{githubpassword}}'
-  register: return_val
-  failed_when: "'already exists and is not an empty directory' not in return_val.stdout"
+  ignore_errors: yes
   no_log: true
 
