Timeout added in github role.

--- a/deployment/sandbox-v2/roles/github/tasks/main.yml
+++ b/deployment/sandbox-v2/roles/github/tasks/main.yml
@@ -12,6 +12,7 @@
     responses:
       Username: '{{githubuser}}'
       Password: '{{githubpassword}}'
+    timeout: 600
   ignore_errors: yes
   no_log: true
 
