--- a/deployment/sandbox-v2/reset.yml
+++ b/deployment/sandbox-v2/reset.yml
@@ -15,3 +15,4 @@
 - {import_playbook: playbooks/reset/reset-repos.yml}
 - {import_playbook: playbooks/reset/reset-docker-registry.yml}
 - {import_playbook: playbooks/reset/reset-nginx.yml}
+- {import_playbook: playbooks/reset/reset-kafka.yml}
